# fluent-bit-plugin

./: CMakeLists.txt  README.md
out_stdout2/: CMakeLists.txt  stdout2.c
out_tcp2/: CMakeLists.txt  tcp2.c  tcp2.h
